<resources>
    <string name="app_name">PoseMatching</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Take photo</string>
    <string name="photo_capture_success">Photo capture succeeded: %1$s</string>
    <string name="permissions_not_granted">Permissions not granted by the user</string>
    <string name="welcome_string1">Welcome! Span to start the game</string>
    <string name="spanned_welcome_string1">Welcome! Now that you spanned you can play the game and stuff</string>
    <string name="spanned_welcome_string2">Choose a reference image to begin!</string>
    <string name="reference_welcome_string2">Click below to start playing!</string>
    <string name="start_game">Start Game</string>
    <string name="poses_match">Poses match, great job!</string>
    <string name="poses_dont_match">Poses don\'t match, try again :)</string>
    <string name="pose">POSE!</string>
    <string name="matching_stats">Matching statistics:\n</string>
    <string name="angle_difference">%1$s angle difference - %2$f</string>
    <string name="angle_skipped">%1$s angle comparison was skipped</string>
    <string name="elbow">elbow</string>
    <string name="shoulder">shoulder</string>
    <string name="hip">hip</string>
    <string name="knee">knee</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="score">Score: %1$s</string>
    <string name="unable">unable to calculate</string>
    <string name="game_paused">Game Paused</string>
    <string name="launch_game">I\'m ready!</string>
    <string name="restart">Quit and go home</string>
    <string name="ic_span_description">Stick figure with outstretched arms</string>
    <string name="ic_point_description">Stick figure pointing to the side</string>
    <string name="ic_carry_description">Stick figure carrying a circle that reads Let\'s Play</string>
    <string name="ic_sit_description">Stick figure sitting on the ground and pointing upwards</string>
    <string name="reference_image">Reference image</string>
    <string name="pick_reference_image">Pick Reference Image</string>
    <string name="default_references_button_text">Choose Images For Me!</string>
    <string name="add_reference_image">Add another reference image</string>
    <string name="play_again">Play Again</string>
    <string name="thanks_for_playing">Thanks for playing! Click below to play again!</string>
    <string name="congratulations">Congratulations, you\'re a pose master!\nYour score is</string>
    <string name="current_score">Current score:</string>
    <string name="next_image">Continue</string>
    <string name="number_reference_images">Number of reference images:</string>
</resources>